--- a/saas-css/assets/scss/partials/_contact.scss
+++ b/saas-css/assets/scss/partials/_contact.scss
@@ -6,7 +6,7 @@
         margin: 10% auto;
         display: flex;  
         flex-direction: column;
-        // align-items: center;
+        align-items: center;
         .row{
             .title{
                 text-align: center;
